Add jpeg-9f directory to nano-X Makefile
Add jpeg-9f directory to nano-X Makefile so libjpeg.a is built first

--- a/src/Makefile
+++ b/src/Makefile
@@ -21,6 +21,7 @@ OBJS =
 
 # demos should be built after the libs !
 dirs := \
+	$(MW_DIR_SRC)/jpeg-9f \
 	$(MW_DIR_SRC)/drivers \
 	$(MW_DIR_SRC)/engine \
 	$(MW_DIR_SRC)/fonts \
