--- a/src/config
+++ b/src/config
@@ -21,7 +21,7 @@ SHAREDLINK               = N
 #EXTRAFLAGS               = -Wall -Wno-missing-prototypes
 DEBUG                    = N
 OPTIMIZE                 = Y
-#OPTIMIZE                 = -O1
+OPTIMIZE                 = -O3
 VERBOSE                  = N
 THREADSAFE               = N
 PARALLEL                 = N
@@ -44,7 +44,7 @@ SCREEN_HEIGHT            = 480
 # Libraries to build: microwin, nano-X, nxlib, engine
 #
 ####################################################################
-MICROWIN                 = Y
+MICROWIN                 = N
 NANOX                    = Y
 NUKLEARUI                = Y
 NX11                     = Y
@@ -57,7 +57,7 @@ TINYWIDGETS              = N
 #
 ####################################################################
 FBEMULATOR               = N
-MICROWINDEMO             = Y
+MICROWINDEMO             = N
 MICROWINMULTIAPP         = N
 NANOXDEMO                = Y
 HAVE_VNCSERVER_SUPPORT   = N
@@ -97,9 +97,9 @@ HAVE_XPM_SUPPORT         = Y
 ####################################################################
 # JPEG support through libjpeg, see README.txt in contrib/jpeg
 ####################################################################
-HAVE_JPEG_SUPPORT        = N
-INCJPEG                  =
-LIBJPEG                  = -ljpeg
+HAVE_JPEG_SUPPORT        = Y
+INCJPEG                  = $(MW_DIR_SRC)/jpeg-9f
+LIBJPEG                  = -L$(MW_DIR_SRC)/jpeg-9f -ljpeg
 
 ####################################################################
 # PNG support via libpng and libz
